# china-holidays

./: .gitignore  README.md  pyproject.toml
holidays/: __init__.py  crawler.py  holiday.py  model.py  parser.py
tests/: test_crawler.py  test_holiday.py  test_parser.py
