[tool.poetry]
name = "simple-python-cn-holidays"
version = "0.0.1"
description = "A simple and easy to use library to determine whether a date is a holiday."
authors = ["chiafei <chiafeilee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
requests = "^2.28.1"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.981"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
